--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ click = "^8.0.1"
 python-dateutil = "^2.8.2"
 loguru = "^0.5.3"
 tqdm = "^4.62.1"
+ratelimit = "^2.2.1"
 
 [tool.poetry.dev-dependencies]
 black = "^21.7b0"
