--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python-dateutil = "^2.8.2"
 loguru = "^0.5.3"
 tqdm = "^4.62.1"
 ratelimit = "^2.2.1"
+beautifulsoup4 = "^4.10.0"
 
 [tool.poetry.dev-dependencies]
 black = "^21.7b0"
