Fix readme, CLI entrypoint

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,4 +22,4 @@ requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-gabber = "gabber.client:run"
+gabber = "gabber.client:cli_entrypoint"
