--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ loguru = "^0.6.0"
 tqdm = "^4.62.1"
 ratelimit = "^2.2.1"
 beautifulsoup4 = "^4.10.0"
+undetected-chromedriver = "^3.1.5"
 
 [tool.poetry.dev-dependencies]
 black = "^21.7b0"
