--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ tqdm = "^4.62.1"
 ratelimit = "^2.2.1"
 beautifulsoup4 = "^4.10.0"
 undetected-chromedriver = "^3.1.5"
+selenium = "^4.3.0"
 
 [tool.poetry.dev-dependencies]
 black = "^21.7b0"
