--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ ratelimit = "^2.2.1"
 beautifulsoup4 = "^4.10.0"
 undetected-chromedriver = "^3.1.5"
 selenium = "^4.3.0"
+curl-cffi = "^0.5.3"
 
 [tool.poetry.dev-dependencies]
 black = "^21.7b0"
