--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ beautifulsoup4 = "^4.10.0"
 undetected-chromedriver = "^3.1.5"
 selenium = "^4.3.0"
 curl-cffi = "^0.5.3"
+retry = "^0.9.2"
+httpx = "^0.24.0"
 
 [tool.poetry.dev-dependencies]
 black = "^21.7b0"
