--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,9 @@
 [tool.poetry]
 name = "gabber"
-version = "0.1.1"
-description = ""
+version = "0.1.2"
+description = "Gabber is a tool for scraping and analyzing Gab posts."
 authors = ["R. Miles McCain <mccain@stanford.edu>"]
+readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.8"
