--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ beautifulsoup4 = "^4.10.0"
 undetected-chromedriver = "^3.1.5"
 selenium = "^4.3.0"
 curl-cffi = ">=0.5.3,<0.8.0"
+retry = "^0.9.2"
 
 [tool.poetry.dev-dependencies]
 black = "^21.7b0"
